[tool.poetry]
name = "netcad"
version = "0.0.2"
description = "NetCAD - Network Automation by Design"
authors = ["Jeremy Schulman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
httpx = "^0.19.0"
tenacity = "^8.0.1"
pydantic = "^1.8.2"
Jinja2 = "^3.0.2"
more-itertools = "^8.10.0"
toml = "^0.10.2"
rich = "^10.12.0"
aiofiles = "^0.7.0"
maya = "^0.6.1"
bracket-expansion = "^1.0.0"
pydantic-env = "^0.2.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.*"
invoke = "^1.7.0"
black = "^23.*"
flake8 = "^4.*"
flake8-breakpoint = "^1.1.0"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
asynctest = "^0.13.0"
tox = "^3.23.1"
pre-commit = "^2.19.0"
interrogate = "^1.5.0"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
    netcad = 'netcad.cli.netcad:script'
    netcam = 'netcad.cli.netcam:script'
