[tool.poetry]
name = "netcad"
version = "0.0.3"
description = "NetCAD - Network Automation by Design"
authors = ["Jeremy Schulman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.1"
pydantic = "^1.8.2"
Jinja2 = "^3.0.2"
toml = "^0.10.2"
rich = "^12.6"
aiofiles = "^0.7.0"
maya = "^0.6.1"
bracket-expansion = "^1.0.0"
pydantic-env = "^0.2.0"
igraph = "^0.9.11"
bidict = "^0.22.0"


[tool.poetry.dev-dependencies]
pytest = "*"
invoke = "*"
black = "*"
flake8 = "*"
flake8-breakpoint = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pre-commit = "*"
interrogate = "*"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
    netcad = 'netcad.cli.netcad:script'
    netcam = 'netcad.cli.netcam:script'
